--- a/main.css
+++ b/main.css
@@ -79,6 +79,7 @@ h1{
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
+    font-size: larger;
 }
 
 /*Changes Background color of buttons on hover*/
@@ -99,6 +100,7 @@ h1{
     border: 1px solid #ccc;
     border-top: none;
     border-radius: 0px 0px 20px 20px;
+    font-size: larger;
 }
 
 /* Style for the download resume button*/
