--- a/main_mobile.css
+++ b/main_mobile.css
@@ -105,42 +105,66 @@ h1{
 
 /* Style for the download resume button*/
 .resumelink{
-    display: inline-block;
-    background-color: #333;
-    color: yellow;
+    border: none;
+    color: #333;
+    outline: none;
+    word-wrap: normal;
+    background-color: rgba(255,255,255,.8);
     cursor:pointer;
-    padding: .9% 1.8%;
+    padding: 2% 2%;
 }
 
 /* Fades out the download resume button upon hover*/
 .resumelink:hover{
-    display: inline-block;
-    background-color: yellow;
-    color: #333;
-    padding: 1% 2%;
+    background-color: #ddd;
+    padding: 4% 4%;
+    color: inherit;
 }
 /* Style for the resume-button element*/
 #resumeButton{
+    width: 100%;
+}
+/* Container for resume button element*/
+#resumeButtonDiv{
+    display: flex;
     text-align: center;
+    width: 100%;
+    margin-bottom: 20%;
 }
-
-#About_Me{
-    align-self: center;
-    padding-left: 100px;
+/* flex container for the self-portrait image / button and About Me*/
+#ME{
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-bottom: 20px;
+    display:inline-flex;
+    gap: 5%;
+    width: fit-content;
+    height: max-content;
+    overflow: hidden;
 }
-
+/* Flex Container for Resume button and self portrait */
+#jlr_info{
+    flex: 1;
+    gap: 5%;
+    display: inline-flex;
+    flex-direction: column;
+    width: max-content;
+}
 /* Style for the self-portrait element*/
 #selfPortrait {
-    border-radius: 100px;
-    max-width: 100%;
-    height: auto;
+    border-radius: 5% 5% 5% 5%;
+    width: 100%;
+    height: 100%;
 }
-/* flex container for the self-portrait image */
-.ME{
+/* About Me paragraph styling */
+#About_Me{
+    flex: 2;
+    padding-right: 5%;
     display: flex;
-    padding-bottom: 20px;
+    word-wrap: break-word;
+    max-width: fit-content;
+    height: fit-content;
 }
-
 /* style for the social media flex container*/
 .socialmedialine{
     display: flex;
