Update mobile css file.

--- a/main_mobile.css
+++ b/main_mobile.css
@@ -149,7 +149,7 @@ h1{
     gap: 5%;
     display: inline-flex;
     flex-direction: column;
-    width: max-content;
+    width: 100%;
 }
 /* Style for the self-portrait element*/
 #selfPortrait {
